<resources>
    <string name="app_name">SeoGraph Webmasters Tool</string>

    <string name="title_activity_app_intro"></string>
    <string name="intro_sitemap_title">Manage Sitemaps</string>
    <string name="intro_sitemap_desc">Manage your sitemaps at any anywhere and time</string>
    <string name="interstitial_full_screen">ca-app-pub-8019445966160525/8136471519</string>

    <string name="intro_analytics_title">Stunning Analytics</string>
    <string name="intro_analytics_desc">Track your webmasters analytics easily</string>

    <string name="intro_multi_site_title">Multi Site Support</string>
    <string name="intro_multi_site_desc">Manage all your sites from the comfort of your phone</string>
    <string name="app_minimized">App is minimized</string>

    <string name="auth_window_intro_text">Seograph is an app for google webmasters tools &amp; all SEO needs.</string>
    <string name="intent_connection_failed">Internet connection failed</string>
    <string name="please_wait">Please Wait..</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_success">Login Successful</string>
    <string name="sites">Sites</string>
    <string name="verified">Verified</string>
    <string name="unverified">Unverified</string>
    <string name="refresh">Resfresh</string>
    <string name="filter_sites">Filter Sites</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_site_url">Site URL eg. http://example.com</string>
    <string name="add_site">Add Site</string>
    <string name="add">Add</string>
    <string name="site_url_required">Site URL is required</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="site_added_success"> sucessfully added, please manually verify
    it from your webmasters console account.</string>
    <string name="adding_site">Adding site to webmasters tool console</string>
    <string name="delete">Delete</string>
    <string name="delete_site">Delete Site</string>
    <string name="undo">UNDO</string>
    <string name="deleting_site">Deleting Site</string>
    <string name="site_delete_success">Site Delete Success</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="search_analytics">Search Analytics</string>
    <string name="access_token_failed">Failed to retrieve access token, cannot continue</string>
    <string name="refresh_token">Failed to retrieve refresh token</string>
    <string name="revoke_access">Revoke Access</string>
    <string name="analytics">Analytics</string>
    <string name="crawl_stats">Crawl Stats</string>
    <string name="comparison_stats">Comparison</string>
    <string name="sitemaps">Sitemaps</string>
    <string name="site_errors">Site Errors</string>
    <string name="filter_results">Filter Results</string>
    <string name="clicks">Clicks</string>
    <string name="CTR">CTR</string>
    <string name="click_through_rate">Click Through Rate (CTR)</string>
    <string name="impressions">Impressions</string>
    <string name="keys">Keys</string>
    <string name="position">Position</string>
    <string name="stats_date">Stats Date</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_seven_days">Last Seven Days</string>
    <string name="this_month">This Month</string>
    <string name="last_month">Last Month</string>
    <string name="last_three_months">Last Three Months</string>
    <string name="custom_date">Custom Dates</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="startDate_exceeds_endDate">Start Date cannot be greater than End Date</string>
    <string name="hello_blank_fragment">Hmm</string>
    <string name="filter_by">Filter By:</string>
    <string name="filter_country_text">Country (Leave empty for all)</string>
    <string name="device">Device</string>
    <string name="all_devices">All Devices</string>
    <string name="desktop">Desktop</string>
    <string name="tablet">Tablet</string>
    <string name="mobile">Mobile</string>
    <string name="page_uri">Page URI</string>
    <string name="keyword">Keyword</string>
    <string name="search_type">Search Type</string>
    <string name="web">Web</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="search_country">Search Country</string>
    <string name="group_by">Group By:</string>
    <string name="compare">Elements to Compare:</string>
    <string name="date">Date</string>
    <string name="countries">Countries</string>
    <string name="devices">Devices</string>
    <string name="pages">Pages</string>
    <string name="keywords">Keywords</string>
    <string name="count">Count</string>
    <string name="timestamp">Timestamp</string>
    <string name="category">Category</string>
    <string name="platform">platform</string>
    <string name="serverError">Server Error</string>
    <string name="not_found">Not Found</string>
    <string name="roboted">Roboted</string>
    <string name="soft404">Soft404</string>
    <string name="manyToOneRedirect">Many To One Redirect</string>
    <string name="not_Followed">Not Followed</string>
    <string name="other">Other</string>
    <string name="query_returned_no_data">Query returned no data</string>
    <string name="show_grid">Show Grid</string>
    <string name="clicks_by_keywords">Clicks By Keywords</string>
    <string name="clicks_by_countries">Clicks By Countries</string>
    <string name="clicks_by_devices">Clicks By Devices</string>
</resources>
