<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_marginBottom="3dp"
        android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/dates_option_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/today" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/yesterday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yesterday" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/last_seven_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_seven_days" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/this_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_month" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/last_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_month" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/last_three_months"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_three_months" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue_grey_lighten_4"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/custom_dates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_date" />
    </RadioGroup>

    <!--Custom Date Picker-->
    <LinearLayout
        android:id="@+id/custom_date_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/custom_start_date_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/custom_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start_date"
                android:inputType="none"
                android:clickable="true"
                android:focusable="false" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/custom_end_date_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/custom_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/end_date"
                android:focusable="false"
                android:inputType="none"
                android:clickable="true" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cancel_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_alignParentRight="true"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/save_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_alignParentRight="true"
            android:text="@string/ok"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>