<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_by"
        android:textStyle="normal"
        android:textSize="12sp"
        android:padding="10dp" />

    <android.support.v7.widget.AppCompatCheckBox
        android:tag="clicks"
        android:id="@+id/tv_clicks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clicks"
        android:checked="true" />

    <android.support.v7.widget.AppCompatCheckBox
        android:tag="ctr"
        android:id="@+id/tv_ctr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_through_rate"
        android:background="?android:attr/selectableItemBackground" />

    <android.support.v7.widget.AppCompatCheckBox
        android:tag="position"
        android:id="@+id/tv_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/position"
        android:background="?android:attr/selectableItemBackground" />

    <android.support.v7.widget.AppCompatCheckBox
        android:tag="impressions"
        android:id="@+id/tv_imprs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/impressions"
        android:background="?android:attr/selectableItemBackground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/close_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:padding="15dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorAccent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/save_grouping"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:padding="15dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorAccent" />
    </LinearLayout>


</LinearLayout>