<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by"
        android:textStyle="normal"
        android:textSize="12sp"
        android:padding="10dp" />

    <!-- by country -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/filter_by_country_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/by_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/filter_country_text"
                android:paddingRight="5dp"
                android:focusable="false"
                android:focusableInTouchMode="false" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/clear_country_input"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end|center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_cancel"
            android:tint="@color/blue_grey_lighten_2"
            android:visibility="invisible" />

    </FrameLayout>
    <!--End By Country -->

    <!--Filter By Device -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Widget.Design.TextInputLayout"
        android:textSize="12sp"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="10dp"
        android:text="@string/device"/>

    <RadioGroup
        android:id="@+id/by_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatRadioButton
            android:tag="all_devices"
            android:id="@+id/all_devices"
            android:text="@string/all_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:tag="desktop"
            android:id="@+id/desktop"
            android:text="@string/desktop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatRadioButton
            android:tag="tablet"
            android:id="@+id/tablet"
            android:text="@string/tablet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatRadioButton
            android:tag="mobile"
            android:id="@+id/mobile"
            android:text="@string/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <!--End Filter By Device  -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/filter_by_keyword_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/by_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/keyword"
            />
    </android.support.design.widget.TextInputLayout>

    <!--Search Type -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Widget.Design.TextInputLayout"
        android:textSize="12sp"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="10dp"
        android:text="@string/search_type"/>

    <RadioGroup
        android:id="@+id/search_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatRadioButton
            android:tag="web"
            android:id="@+id/web"
            android:text="@string/web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:tag="image"
            android:id="@+id/image"
            android:text="@string/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatRadioButton
            android:tag="video"
            android:id="@+id/video"
            android:text="@string/video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <!--end search type -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/filter_by_page_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/by_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/page_uri"
            />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/close_filter_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:padding="15dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorAccent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/save_filter_config"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:padding="15dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorAccent" />
    </LinearLayout>


</LinearLayout>