<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/site_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_site_url"
            android:textSize="14sp"
            android:focusable="true"
            android:inputType="textWebEditText" />

    </android.support.design.widget.TextInputLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_layout"
        android:layout_alignParentRight="true">


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/save_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_toRightOf="@id/save_site"
            android:textAllCaps="true"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/colorAccent"
            android:clickable="true" />

    </RelativeLayout>

</RelativeLayout>
